# Life-OS

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_memory_tables.py
app/: __init__.py  main.py
app/agent/: graph.py
app/agents/: calendar_agent.py  graph.py  memory_agent.py  planner.py  task_agent.py
app/api/: dependencies.py  notes.py  reminders.py  sessions.py  tasks.py  users.py
app/core/: config.py
app/db/: base.py  session.py
app/integrations/: weather.py
app/memory/: __init__.py  long_term.py  memory_manager.py  redis_store.py  router.py  short_term.py  vector_store.py
app/models/: memory.py  notes.py  reminders.py
app/prompts/: memory.txt  planner.txt
app/repositories/: memory_repository.py  note_repository.py  reminder_repository.py
app/scheduler/: celery_app.py
app/schemas/: memory.py  notes_reminders.py
app/services/: ai.py  chat_service.py  intent_detector.py  memory_service.py  note_service.py  reminder_service.py
app/static/: index.html
docs/: IMPLEMENTATION_BACKLOG.md  PROJECT_PLAN.md
tests/: conftest.py  test_intent.py  test_notes.py  test_reminders.py  test_sessions.py  test_short_term.py
